--- a/Cookery/Base.lproj/Main.storyboard
+++ b/Cookery/Base.lproj/Main.storyboard
@@ -369,7 +369,18 @@
                     <view key="view" contentMode="scaleToFill" id="1A7-MG-KEN">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="COx-Rb-3x8">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                            </mapView>
+                        </subviews>
                         <color key="backgroundColor" red="0.50196081400000003" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="COx-Rb-3x8" firstAttribute="bottom" secondItem="T7u-AW-FOT" secondAttribute="top" id="17d-lD-maA"/>
+                            <constraint firstAttribute="trailing" secondItem="COx-Rb-3x8" secondAttribute="trailing" id="2UD-qq-6Oi"/>
+                            <constraint firstItem="COx-Rb-3x8" firstAttribute="leading" secondItem="1A7-MG-KEN" secondAttribute="leading" id="VMC-OG-Z2d"/>
+                            <constraint firstItem="COx-Rb-3x8" firstAttribute="top" secondItem="sul-Zh-dr4" secondAttribute="bottom" id="sKX-2r-9ZV"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="EeB-Es-6nJ">
                         <barButtonItem key="leftBarButtonItem" image="menu-of-three-lines" id="GT3-9C-XCo">
@@ -377,6 +388,9 @@
                         </barButtonItem>
                     </navigationItem>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="mapView" destination="COx-Rb-3x8" id="CmE-sT-Gu4"/>
+                    </connections>
                 </viewController>
                 <navigationItem id="1Ab-kd-anf">
                     <barButtonItem key="leftBarButtonItem" image="menu-of-three-lines" id="3Ki-9a-ivY">
@@ -385,7 +399,7 @@
                 </navigationItem>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ewb-Cn-9pX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1922" y="869"/>
+            <point key="canvasLocation" x="1921.5" y="868.5"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="dfU-f9-NSw">
